--- a/config/locales/simple_form.pt-BR.yml
+++ b/config/locales/simple_form.pt-BR.yml
@@ -11,37 +11,17 @@ pt-BR:
     error_notification:
       default_message: "Por favor, verifique os erros abaixo:"
     labels:
-      defaults:
-        password: 'Senha'
-      event:
-        title: 'Título'
-        event_image: 'Imagem'
-        description: 'Resumo'
-        body: 'Descrição'
-        start_date: 'Data de início'
-        end_date: 'Data de fim (opcional)'
-    placeholders:
-      event:
-        title: 'Nome de seu evento'
-        event_image: 'Imagem'
-        description: 'Descrição resumida'
-        body: 'Descrição Completa'
-        city: 'Cidade'
-        state: 'UF'
-        url: 'URL do evento'
-        start_date: 'Ex: 10/12/2014'
-        end_date: 'Ex: 10/12/2014'
-      newsletter:
+      contact:
         name: 'Nome'
         email: 'Email'
-
-    #   user:
-    #     new:
-    #       email: 'E-mail to sign in.'
-    #     edit:
-    #       email: 'E-mail.'
-    # hints:
-    #   defaults:
-    #     username: 'User name to sign in.'
-    #     password: 'No special characters, please.'
+        phone_number: 'Telefone'
+        subject: 'Assunto'
+        body: 'Mensagem'
+    placeholders:
+      contact:
+        name: 'Nome Completo'
+        email: 'exemplo@provedor.com'
+        phone_number: '(11) 99999-9999'
+        subject: 'Do que se trata sua mensagem?'
+        body: 'Escreva sua mensagem aqui.'
 
